--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -7,5 +7,10 @@
   <body>
     <h1>Pig Latinizer</h1>
   
+    <form action="user-input" method="POST">
+      
+      
+      
+    </form>
   </body>
 </html>
