Automatically backed up by Learn

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -8,7 +8,7 @@
     <h1>Pig Latinizer!</h1>
   
     <form action="user-input" method="POST">
-      
+      <p></p>Enter your phrase:
       
       
     </form>
