--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -8,8 +8,8 @@
     <h1>Pig Latinizer!</h1>
   
     <form action="user-input" method="POST">
-      <p></p>
-      
+      <p>Enter your phrase:<input type="text" name="input" /></p>
+      <input type="submit" id="Submit" />
       
     </form>
   </body>
