--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -7,7 +7,7 @@
   <body>
     <h1>Pig Latinizer!</h1>
   
-    <form action="user-input" method="POST">
+    <form action="/" method="POST">
       <p>Enter your phrase:<input type="text" name="user_phrase" /></p>
       <input type="submit" id="Submit" />
       
